<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/course_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/addmodcourse_title"
        android:inputType="text" />
    <!-- Enter mentor information -->

    <EditText
        android:id="@+id/coursementor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/course_title"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/addmodcoursementor_name"
        android:inputType="text" />
    <!-- Select the course status -->

    <EditText
        android:id="@+id/coursementor_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/course_title"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/addmodcoursementor_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/coursementor_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/course_title"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/addmodcoursementor_phone"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/course_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/coursementor_name"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="-170dp"
        android:hint="@string/addmodcourse_status" />

    <TextView
        android:id="@+id/course_startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_title"
        android:layout_marginStart="5dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/addmodcourse_startdate"
        android:importantForAutofill="no"
        android:padding="5dp" />

    <TextView
        android:id="@+id/course_enddate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_title"
        android:layout_marginStart="50dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/course_startdate"
        android:ems="10"
        android:hint="@string/addmodcourse_enddate"
        android:importantForAutofill="no"
        android:padding="5dp" />

    <Button
        android:id="@+id/course_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/course_startdate"
        android:layout_alignBottom="@id/course_enddate"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="-100dp"
        android:text="@string/addmodcourse_cancel" />

    <Button
        android:id="@+id/course_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/course_cancel"
        android:layout_alignBottom="@+id/course_enddate"
        android:layout_marginEnd="-153dp"
        android:layout_marginBottom="-100dp"
        android:text="@string/addmodterm_save" />


</RelativeLayout>