<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <EditText
        android:id="@+id/term_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/addmodterm_termtitle"
        android:inputType="text" />

    <TextView
        android:id="@+id/startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/term_title"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/addmodterm_startdate"
        android:importantForAutofill="no"
         />

    <TextView
        android:id="@+id/enddate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/term_title"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/startdate"
        android:ems="10"
        android:hint="@string/addmodterm_enddate"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/startdate"
        android:layout_alignBottom="@id/enddate"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-64dp"
        android:text="@string/addmodterm_cancel" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/cancel"
        android:layout_alignBottom="@+id/enddate"
        android:layout_marginRight="-120dp"
        android:layout_marginBottom="-64dp"
        android:text="@string/addmodterm_save" />

</RelativeLayout>