<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/assessment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/addmodassessment_title"
        android:inputType="text" />

    <TextView
        android:id="@+id/assessment_duedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/assessment_title"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/addmodassessment_duedate"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/assessment_title_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/assessment_title"
        android:layout_alignEnd="@+id/assessment_duedate"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="-155dp"
        android:layout_toEndOf="@+id/assessment_duedate"
        android:text="@string/addmodassessment_assessmenttype_label" />

    <Spinner
        android:id="@+id/assessment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/assessment_title"
        android:layout_alignEnd="@+id/assessment_title_holder"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="-54dp"
        android:hint="@string/addmodassessment_assessmenttype_label" />

    <Button
        android:id="@+id/assessment_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/assessment_duedate"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="-90dp"
        android:layout_toStartOf="@+id/save"
        android:text="@string/addmodterm_cancel" />

    <Button
        android:id="@+id/assessment_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/assessment_duedate"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="-90dp"
        android:text="@string/addmodterm_save" />

</RelativeLayout>